--- a/molecule/drupal8/playbook.yml
+++ b/molecule/drupal8/playbook.yml
@@ -126,8 +126,11 @@
         steamengine_project_type: drupal
         steamengine_drupal_mysql_host: 172.17.0.1
         steamengine_drupal_mysql_port: 4806
-        steamengine_drupal_mysql_db_name: "drupal"
-        steamengine_drupal_mysql_db_user: "drupal"
-        steamengine_drupal_mysql_db_password: "drupal"
-        steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/drupal_8.zip #Drupal 9: https://delivery.steamulo.org/SteamEngineV2_tests/drupal_9.zip
-        steamengine_build_checksum: sha1:4c2b8420fca1fb2fb4f367696b126dceac1cccd2 #Drupal 9 : d6d2a3e93857b97b6c8b914b28e9a3766fe56bf8
+        steamengine_drupal_mysql_name: drupal
+        steamengine_drupal_mysql_user: drupal
+        steamengine_drupal_mysql_password: drupal
+        steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/drupal_8.zip
+        steamengine_build_checksum: sha1:4c2b8420fca1fb2fb4f367696b126dceac1cccd2
+
+#Drupal 9: https://delivery.steamulo.org/SteamEngineV2_tests/drupal_9.zip
+#Drupal 9 : d6d2a3e93857b97b6c8b914b28e9a3766fe56bf8
