[EVOL] Add SF crons and command into steamengine bin

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -75,3 +75,23 @@ steamengine_sf_var_directory: "var"
 steamengine_sf_log_directory: "log"
 # Directory for cache files
 steamengine_sf_cache_directory: "cache"
+# Custom PHP command to put into steamengine bin (cf steamengine_symfony.sh.j2)
+steamengine_sf_command:
+  - cmd_name: "cacheclear" # param to use for steamengine to launch this command
+    description: "Clear symfony cache" # description of this command into steamengine bin
+    cmd: "cache:clear --env=prod" # PHP command to put into steamengine bin
+# List of PHP command to put into a cron. This command will be automatically put into steamengine and call from cron
+# cmd_name, description  and cmd are mandatory, day, hour, minute, month, special_time and weekday are optional
+# Example : 
+# steamengine_sf_crons:
+#   - cmd_name: "hello_world" # without space or special char
+#     description: "Hello World"
+#     cmd: "cache:hello:world"
+#     day: "*" # optional
+#     hour: "*" # optional
+#     minute: "*" # optional
+#     month: "*" # optional
+#     special_time: daily # optional
+#     weekday: "*" # optional
+#     disabled: no # optional
+steamengine_sf_crons: []
