--- a/tasks/symfony/deploy.yml
+++ b/tasks/symfony/deploy.yml
@@ -177,3 +177,16 @@
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_sf
+
+- name: "Generate Crons"
+  cron:
+    name: "{{ item.description }}"
+    day: "{{ item.day | default(omit) }}"
+    hour: "{{ item.hour |default(omit) }}"
+    minute: "{{ item.minute | default(omit) }}"
+    month: "{{ item.month | default(omit) }}"
+    special_time: "{{ item.special_time | default(omit) }}"
+    weekday: "{{ item.weekday | default(omit) }}"
+    disabled: "{{ item.disabled | default(omit) }}"
+    job: "/{{ steamengine_project_name }}/bin/steamengine {{ item.cmd_name }} 1>>/{{ steamengine_project_name }}/log/{{ item.cmd_name }}.log 2>&1"
+  with_items: "{{ steamengine_sf_crons }}"
