--- a/tasks/symfony/deploy.yml
+++ b/tasks/symfony/deploy.yml
@@ -173,7 +173,7 @@
     - steamengine_deploy_sf
 
 - name: "Fix permissions after updating source"
-  command: "{{ steamengine_logs_path }}/steamengine fixpermissions"
+  command: "{{ steamengine_bin_path }}/steamengine fixpermissions"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_sf
@@ -188,5 +188,5 @@
     special_time: "{{ item.special_time | default(omit) }}"
     weekday: "{{ item.weekday | default(omit) }}"
     disabled: "{{ item.disabled | default(omit) }}"
-    job: "{{ steamengine_bin_path }}/steamengine {{ item.cmd_name }} 1>>/{{ steamengine_logs_path }}/{{ item.cmd_name }}.log 2>&1"
+    job: "{{ steamengine_bin_path }}/steamengine {{ item.cmd_name }} 1>>{{ steamengine_logs_path }}/{{ item.cmd_name }}.log 2>&1"
   with_items: "{{ steamengine_sf_crons }}"
