--- a/tasks/drupal/deploy_database.yml
+++ b/tasks/drupal/deploy_database.yml
@@ -11,6 +11,12 @@
   tags:
     - steamengine_deploy_drupal
 
+- name: "Is there a new database: {{ db_dump.changed }}"
+  set_fact:
+    new_database_to_deploy: db_dump.changed
+  tags:
+    - steamengine_deploy_drupal
+
 - name: Unzip project db dump
   unarchive:
     src: "{{ steamengine_home_path }}/db_dump.zip"
@@ -19,21 +25,21 @@
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
     remote_src: yes
-  when: db_dump.changed
+  when: new_database_to_deploy
   tags:
     - steamengine_deploy_drupal
 
 - name: Drupal deploy db
-  shell: "{{ steamengine_drupal_drush_path }} sql:cli < {{ steamengine_home_path }}/{{ steamengine_db_dump_filename }}"
-  args:
-    chdir: "{{ steamengine_project_root_path_web }}"
-  when: db_dump.changed
+  shell: >
+    {{ steamengine_drupal_drush_path }} -r {{ steamengine_project_root_path_web }}/web \
+    sql:cli < {{ steamengine_home_path }}/{{ steamengine_db_dump_filename }}
+  when: new_database_to_deploy
   tags:
     - steamengine_deploy_drupal
 
 - name: Update the database
-  shell: "{{ steamengine_drupal_drush_path }} updatedb -y"
-  args:
-    chdir: "{{ steamengine_project_root_path_web }}"
+  command: "{{ steamengine_drupal_drush_path }} -r {{ steamengine_project_root_path_web }}/web -vvv updatedb -y"
+  register: output
+  when: new_database_to_deploy
   tags:
     - steamengine_deploy_drupal
