Modify tomcat7 to tomcat, handling tomcat 9 version

--- a/molecule/tomcat/molecule.yml
+++ b/molecule/tomcat/molecule.yml
@@ -24,7 +24,7 @@ provisioner:
   lint:
     name: ansible-lint
 scenario:
-  name: tomcat7
+  name: tomcat
 verifier:
   name: testinfra
   options:
