--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   role_name: steamengine
   author: Steamulo
-  description: Production grade installation and deployment workflow for nodejs, tomcat7, play, springboot and static files.
+  description: Production grade installation and deployment workflow for nodejs, tomcat, play, springboot and static files.
   company: Steamulo
   license: BSD
   min_ansible_version: 2.7
