--- a/molecule/tomcat/playbook.yml
+++ b/molecule/tomcat/playbook.yml
@@ -15,11 +15,11 @@
         adoptopenjdk_impl: openj9
     - role: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
-        steamengine_project_name: test_tomcat7
-        steamengine_project_type: tomcat7
+        steamengine_project_name: test_tomcat
+        steamengine_project_type: tomcat
         steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/tomcat_test.war
         steamengine_build_checksum: sha1:80f5053b166c69d81697ba21113c673f8372aca0..
-        steamengine_tomcat7_http_port: 8088
+        steamengine_tomcat_http_port: 8088
         steamengine_project_configuration:
           test_conf:
             item1: test1
