--- a/tasks/tomcat/deploy.yml
+++ b/tasks/tomcat/deploy.yml
@@ -11,7 +11,7 @@
   notify:
     - "{{ steamengine_project_name }} restart"
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Create external configuration file
   template:
@@ -24,7 +24,7 @@
   notify:
     - "{{ steamengine_project_name }} restart"
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Create tomcat directory
   file:
@@ -34,13 +34,13 @@
     mode: u=rwx,g=rx,o=
     state: directory
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Download tomcat
   get_url:
-    url: "{{ steamengine_tomcat7_tomcat_url }}"
-    dest: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat7_tomcat_version }}.tar.gz"
-    checksum: "sha512:{{ steamengine_tomcat7_tomcat_sha512 }}"
+    url: "{{ steamengine_tomcat_tomcat_url }}"
+    dest: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat_tomcat_version }}.tar.gz"
+    checksum: "sha512:{{ steamengine_tomcat_tomcat_sha512 }}"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
@@ -48,17 +48,17 @@
   notify:
     - "{{ steamengine_project_name }} restart"
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: "Is there a new tomcat version: {{ get_url_tomcat.changed }}"
   set_fact:
     new_tomcat_version: get_url_tomcat.changed
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Unzip tomcat
   unarchive:
-    src: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat7_tomcat_version }}.tar.gz"
+    src: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat_tomcat_version }}.tar.gz"
     dest: "{{ steamengine_project_root_path }}/tomcat"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
@@ -67,7 +67,7 @@
     extra_opts: [--strip-components=1]
   when: new_tomcat_version
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Remove default tomcat deployment
   file:
@@ -75,7 +75,7 @@
     state: absent
   when: new_tomcat_version
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Remove default tomcat deployment (2)
   file:
@@ -86,7 +86,7 @@
     mode: u=rwx,g=rx,o=
   when: new_tomcat_version
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Create tomcat ROOT deployment
   file:
@@ -97,7 +97,7 @@
     mode: u=rwx,g=rx,o=
   when: new_tomcat_version
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Create tomcat working directory
   file:
@@ -108,7 +108,7 @@
     mode: u=rwx,g=rwx,o=
   when: new_tomcat_version
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Create tomcat temp directory
   file:
@@ -119,19 +119,33 @@
     mode: u=rwx,g=rwx,o=
   when: new_tomcat_version
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
-- name: Create tomcat configuration file
+- name: Create tomcat7-8 configuration file
   template:
     src: "tomcat7.server.xml.j2"
     dest: "{{ steamengine_project_root_path }}/tomcat/conf/server.xml"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
+  when: steamengine_tomcat_major_tomcat_version != "9"
   notify:
     - "{{ steamengine_project_name }} restart"
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
+
+- name: Create tomcat9 configuration file
+  template:
+    src: "tomcat9.server.xml.j2"
+    dest: "{{ steamengine_project_root_path }}/tomcat/conf/server.xml"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rwx,g=rx,o=
+  when: steamengine_tomcat_major_tomcat_version == "9"
+  notify:
+    - "{{ steamengine_project_name }} restart"
+  tags:
+    - steamengine_deploy_tomcat
 
 - name: "Download build {{ steamengine_build_url }}"
   get_url:
@@ -148,19 +162,19 @@
     - "{{ steamengine_project_name }} fixpermissions"
     - "{{ steamengine_project_name }} restart"
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: "Is there a new build: {{ get_url_build.changed }}"
   set_fact:
     new_build_to_deploy: get_url_build.changed
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: "Fix permissions before updating source"
   command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: Update webapps/ROOT directory
   unarchive:
@@ -169,10 +183,10 @@
     remote_src: true
   when: new_build_to_deploy
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
 
 - name: "Fix permissions after updating source"
   command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
   tags:
-    - steamengine_deploy_tomcat7
+    - steamengine_deploy_tomcat
