--- a/vars/main.yml
+++ b/vars/main.yml
@@ -17,11 +17,12 @@ steamengine_project_types:
   - springboot
   - static
   - nodejs
-  - tomcat7
+  - tomcat
   - play
 
 # PLAY
 steamengine_play2_run_script: "startproject"
 
 # TOMCAT7
-steamengine_tomcat7_tomcat_url: "https://archive.apache.org/dist/tomcat/tomcat-7/v{{ steamengine_tomcat7_tomcat_version }}/bin/apache-tomcat-{{ steamengine_tomcat7_tomcat_version }}.tar.gz"
+steamengine_tomcat_tomcat_version: "{{ steamengine_tomcat_major_tomcat_version }}.{{ steamengine_tomcat_minor_tomcat_version }}"
+steamengine_tomcat_tomcat_url: "https://archive.apache.org/dist/tomcat/tomcat-{{ steamengine_tomcat_major_tomcat_version }}/v{{ steamengine_tomcat_tomcat_version }}/bin/apache-tomcat-{{ steamengine_tomcat_tomcat_version }}.tar.gz"
