--- a/molecule/drupal8/requirements.yml
+++ b/molecule/drupal8/requirements.yml
@@ -13,3 +13,7 @@
 
 - src: geerlingguy.drush
   version: 3.1.2
+
+- src: https://github.com/STEAMULO/ansible-role-mysql-1.git
+  version: "2.5.7"
+  name: steamulo.mysql
