--- a/tasks/drupal/deploy_database.yml
+++ b/tasks/drupal/deploy_database.yml
@@ -3,7 +3,7 @@
 - name: Download the Project DB dump
   get_url:
     url: "{{ steamengine_db_dump_url }}"
-    dest: "{{ steamengine_home_path }}/db_dump.zip"
+    dest: "{{ steamengine_project_root_path }}/db_dump.zip"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
@@ -11,35 +11,42 @@
   tags:
     - steamengine_deploy_drupal
 
-- name: "Is there a new database: {{ db_dump.changed }}"
-  set_fact:
-    new_database_to_deploy: db_dump.changed
-  tags:
-    - steamengine_deploy_drupal
-
 - name: Unzip project db dump
   unarchive:
-    src: "{{ steamengine_home_path }}/db_dump.zip"
-    dest: "{{ steamengine_home_path }}"
+    src: "{{ steamengine_project_root_path }}/db_dump.zip"
+    dest: "{{ steamengine_project_root_path }}"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
     remote_src: yes
-  when: new_database_to_deploy
+    list_files: yes
+  register: archive_contents
   tags:
     - steamengine_deploy_drupal
 
 - name: Drupal deploy db
   shell: >
-    {{ steamengine_drupal_drush_path }} -r {{ steamengine_project_root_path_web }}/web \
-    sql:cli < {{ steamengine_home_path }}/{{ steamengine_db_dump_filename }}
-  when: new_database_to_deploy
+    {{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} \
+    sql:cli < {{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}
+  tags:
+    - steamengine_deploy_drupal
+
+- name: Delete db dump
+  file: 
+    path: "{{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}"
+    state: absent
+  tags:
+    - steamengine_deploy_drupal
+
+- name: Delete archive db dump
+  file: 
+    path: "{{ steamengine_project_root_path }}/db_dump.zip"
+    state: absent
   tags:
     - steamengine_deploy_drupal
 
 - name: Update the database
-  command: "{{ steamengine_drupal_drush_path }} -r {{ steamengine_project_root_path_web }}/web -vvv updatedb -y"
+  command: "{{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} -vvv updatedb -y"
   register: output
-  when: new_database_to_deploy
   tags:
     - steamengine_deploy_drupal
