--- a/vars/main.yml
+++ b/vars/main.yml
@@ -38,6 +38,8 @@ steamengine_java_base_opts:
   - "-Xdump:heap:events=user"
 
 # DRUPAL
-steamengine_drupal_project_bin_path: "{{ steamengine_project_root_path_web }}/web/vendor/drupal/console/bin"
-steamengine_drupal_drush_path: "/usr/local/bin/drush"
-steamengine_drupal_database_url: "mysql://{{ steamengine_drupal_mysql_user }}:{{ steamengine_drupal_mysql_password }}@{{ steamengine_drupal_mysql_host }}:{{ steamengine_drupal_mysql_port }}/{{ steamengine_drupal_mysql_name }}"
+steamengine_drupal_public_path: "{{ steamengine_project_root_path_web }}/{{ steamengine_drupal_public_directory }}"
+steamengine_drupal_persistent_path: "{{ steamengine_project_root_path }}/link"
+
+# Drush
+drush_launcher_path: "/usr/local/bin/drush"
