--- a/tasks/drupal/deploy_database.yml
+++ b/tasks/drupal/deploy_database.yml
@@ -28,18 +28,19 @@
   shell: >
     {{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} \
     sql:cli < {{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}
+  when: new_deploy and not steamengine_drupal_install_from_drush and steamengine_db_dump_url is defined and steamengine_db_dump_url
   tags:
     - steamengine_deploy_drupal
 
 - name: Delete db dump
-  file: 
+  file:
     path: "{{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}"
     state: absent
   tags:
     - steamengine_deploy_drupal
 
 - name: Delete archive db dump
-  file: 
+  file:
     path: "{{ steamengine_project_root_path }}/db_dump.zip"
     state: absent
   tags:
@@ -47,6 +48,6 @@
 
 - name: Update the database
   command: "{{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} -vvv updatedb -y"
-  register: output
+  when: new_deploy and not steamengine_drupal_install_from_drush and steamengine_db_dump_url is defined and steamengine_db_dump_url
   tags:
     - steamengine_deploy_drupal
