--- a/tasks/drupal/install_from_drush.yml
+++ b/tasks/drupal/install_from_drush.yml
@@ -16,13 +16,16 @@
 
 - name: Install Drupal with drush.
   command: >
-    {{ drush_launcher_path }} site-install standard -y  \
+    {{ steamengine_drush_launcher_path }} site-install {{ steamengine_drupal_install_profile }} -y  \
     -r {{ steamengine_project_root_path_web }} \
     --site-name="{{ steamengine_drupal_install_site_name }}" \
+    --site-mail="{{ steamengine_drupal_install_site_mail }}" \
     --account-name="{{ steamengine_drupal_install_admin_name }}" \
     --account-pass="{{ steamengine_drupal_install_admin_password }}" \
+    --account-mail="{{ steamengine_drupal_install_account_mail }}" \
     --locale="{{ steamengine_drupal_install_site_locale }}" \
-    --db-url="{{ steamengine_drupal_database_url }}"
+    --db-url="{{ steamengine_drupal_install_database_url }}" \
+    --config-dir="{{ steamengine_drupal_install_config_dir }}"
   when: new_deploy and steamengine_drupal_install_from_drush
   tags:
     - steamengine_deploy_drupal
@@ -38,20 +41,5 @@
     state: link
     src: "{{ steamengine_conf_path }}/settings.php"
     dest: "{{ steamengine_project_root_path_web }}/web/sites/default/settings.php"
-  tags:
-    - steamengine_deploy_drupal
-
-- name: Check if there is existing config
-  stat:
-    path: "{{ steamengine_project_root_path_web }}/config"
-  register: config_dir
-  tags:
-    - steamengine_deploy_drupal
-
-- name: Drupal import config
-  command: >
-    {{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} \
-    config-import -y --source={{ steamengine_project_root_path_web }}/config
-  when: config_dir.stat.exists and new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
