--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -52,20 +52,11 @@ steamengine_java_opts:
   - "-Xms512M"
 
 # DRUPAL
-# If is new install of drupal, launch a drush's install
-steamengine_drupal_install_from_drush: true
-# Username for admin account for a drush's install
-steamengine_drupal_install_admin_name: "admin"
-# Password for admin account for a drush's install
-steamengine_drupal_install_admin_password: "admin"
-# Site name for admin account for a drush's install
-steamengine_drupal_install_site_name: "{{ steamengine_project_name }}"
-# Locale for admin account for a drush's install
-steamengine_drupal_install_site_locale: "fr"
-# Url for the dump of database for an install
-steamengine_db_dump_url:
-# Url for the database for a drush's install
-steamengine_drupal_database_url: "mysql://drupal:drupal@localhost:3306/drupal"
+# Path of drush launcher
+steamengine_drush_launcher_path: "/usr/local/bin/drush"
+# Command run at the end of deployment
+steamengine_drupal_drush_command_deployment:
+  - "deploy -y"
 # List of directory we need write permission
 steamengine_drupal_path_with_write_permission:
   - "web/sites/default/files"
@@ -90,3 +81,27 @@ steamengine_drupal_persistent_directory:
   files: "web/sites/default/files"
 # Directory for public file
 steamengine_drupal_public_directory: "web"
+# If is new install of drupal, deploy db dump
+steamengine_drupal_install_from_db_dump: false
+# Url for the dump of database for an install
+steamengine_db_dump_url:
+# If is new install of drupal, launch a drush's install
+steamengine_drupal_install_from_drush: false
+# Profile type for a drush's install (standard|minimal|expert)
+steamengine_drupal_install_profile: "minimal"
+# Username for admin account for a drush's install
+steamengine_drupal_install_admin_name: "admin"
+# Password for admin account for a drush's install
+steamengine_drupal_install_admin_password: "admin"
+# Email for admin accoun for a drush's install
+steamengine_drupal_install_account_mail: "admin@example.com"
+# Site name for admin account for a drush's install
+steamengine_drupal_install_site_name: "{{ steamengine_project_name }}"
+# Site mail for a drush's install
+steamengine_drupal_install_site_mail: "admin@example.com"
+# Locale for admin account for a drush's install
+steamengine_drupal_install_site_locale: "fr"
+# Config dir for a drush's install
+steamengine_drupal_install_config_dir: "../config"
+# Url for the database for a drush's install
+steamengine_drupal_install_database_url: "mysql://drupal:drupal@localhost:3306/drupal"
