--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -125,7 +125,7 @@
 
 - name: Check if database is empty
   command: >
-    {{ drush_launcher_path }} -r \
+    {{ steamengine_drush_launcher_path }} -r \
     {{ steamengine_project_root_path_web }} sql-query 'show tables'
   register: database_table_number
   when: new_build_to_deploy
@@ -142,7 +142,7 @@
 
 - include_tasks:
     file: "./deploy_database.yml"
-  when: new_deploy and not steamengine_drupal_install_from_drush and steamengine_db_dump_url is defined and steamengine_db_dump_url
+  when: new_deploy and steamengine_drupal_install_from_db_dump and steamengine_db_dump_url is defined and steamengine_db_dump_url
   tags:
     - steamengine_deploy
 
@@ -156,8 +156,9 @@
 
 ### Cleaning up
 
-- name: Clean drupal cache
-  command: "{{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} cache:rebuild"
+- name: Drush command post deploy
+  command: "{{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} {{ item }}"
+  with_items: "{{ steamengine_drupal_drush_command_deployment }}"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
