--- a/tasks/drupal/deploy_database.yml
+++ b/tasks/drupal/deploy_database.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Download the Project DB dump
+- name: Download project db dump
   get_url:
     url: "{{ steamengine_db_dump_url }}"
     dest: "{{ steamengine_project_root_path }}/db_dump.zip"
@@ -24,9 +24,9 @@
   tags:
     - steamengine_deploy_drupal
 
-- name: Drupal deploy db
+- name: Depploy db dump with drush
   shell: >
-    {{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} \
+    {{ steamengine_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} \
     sql:cli < {{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}
   when: new_deploy and not steamengine_drupal_install_from_drush and steamengine_db_dump_url is defined and steamengine_db_dump_url
   tags:
@@ -43,11 +43,5 @@
   file:
     path: "{{ steamengine_project_root_path }}/db_dump.zip"
     state: absent
-  tags:
-    - steamengine_deploy_drupal
-
-- name: Update the database
-  command: "{{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} -vvv updatedb -y"
-  when: new_deploy and not steamengine_drupal_install_from_drush and steamengine_db_dump_url is defined and steamengine_db_dump_url
   tags:
     - steamengine_deploy_drupal
