Fix on steamengine_drush_launcher_path

--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -157,7 +157,7 @@
 ### Cleaning up
 
 - name: Drush command post deploy
-  command: "{{ drush_launcher_path }} -r {{ steamengine_project_root_path_web }} {{ item }}"
+  command: "{{ steamengine_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} {{ item }}"
   with_items: "{{ steamengine_drupal_drush_command_deployment }}"
   when: new_build_to_deploy
   tags:
